--- a/dolog.opam
+++ b/dolog.opam
@@ -8,10 +8,10 @@ bug-reports: "https://github.com/UnixJunkie/dolog/issues"
 dev-repo: "git+https://github.com/UnixJunkie/dolog.git"
 depends: [
   "ocaml"
-  "dune"
+  "dune" {>= "1.11"}
   "base-unix"
 ]
-build: ["jbuilder" "build" "-p" name "-j" jobs]
+build: ["dune" "build" "-p" name "-j" jobs]
 synopsis: "The dumb OCaml logging library"
 description: """
 Very simple lazy logging library with optional colors.
